--- a/video/Gogoanime/res/manifest.json
+++ b/video/Gogoanime/res/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Gogoanime",
-    "author": "JimIsWayTooEpic",
+    "author": "nhathanh",
     "id": "en_gogoanime",
     "icon": "icon.png",
     "version": "0.0.1",
