--- a/video/AnimeTVN/res/manifest.json
+++ b/video/AnimeTVN/res/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "Gogoanime",
+    "name": "AnimeTVN",
     "author": "nhathanh",
-    "id": "en_gogoanime",
+    "id": "vi_animetvn",
     "icon": "icon.png",
     "version": "0.0.1",
     "type": "video",
